Make sure background logo is visible while loading

--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,9 @@ body {
 
 #root, main {
   background-color: white;
+}
+
+main {
   position: absolute;
   top: 0;
   bottom: 0;
